--- a/node/package.json
+++ b/node/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "healthaide",
+  "name": "cbf-nyc-chatbot-part1",
   "version": "0.0.1",
-  "description": "Chat bot that finds hospitals",
-  "main": "server.js",
+  "description": "Cognitive Builder Faire NYC Chatbot Workshop - Part 1",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gladysum/healthaide"
+    "url": "https://github.com/ibm-cds-labs/cbf-nyc-chatbot.git"
   },
   "author": "Mark Watson <markwats@us.ibm.com>",
   "license": "Apache 2.0",
@@ -18,17 +18,11 @@
   },
   "homepage": "https://github.com/ibm-cds-labs/cbf-nyc-chatbot",
   "dependencies": {
-    "cfenv": "1.0.x",
-    "cloudant": "^1.6.2",
     "csv-parse": "^1.2.0",
     "dotenv": "^2.0.0",
-    "ejs": "^2.5.5",
-    "express": "4.13.x",
-    "foursquarevenues": "^3.0.1",
     "fs": "0.0.1-security",
+    "prompt": "^1.0.0",
     "should": "^11.2.1",
-    "slackbots": "^1.0.2",
-    "watson-developer-cloud": "^2.31.1",
-    "websocket": "^1.0.23"
+    "watson-developer-cloud": "^2.31.1"
   }
 }
